# back/src/app.js
@@ -20,13 +20,9 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 let whiteList = process.env.FRONT_ENDPOINT
 whiteList = whiteList.split(",");
 
-console.log(whiteList)
-
-
 const corsOptions = {
   origin: (origin, callback) => {
     if (whiteList.indexOf(origin !== -1)) {
-      console.log(origin)
       callback(null, true);
     } else {
       callback(new Error('Not allowed by CORS'))
@@ -61,37 +57,6 @@ app.post("/api/message", cors(corsOptions), (req, resp, next) => {
   });
 });
 
-app.post("/user", cors(corsOptions), (req, resp) => {
-  let response = {
-    id: null,
-    user: null,
-    status: true
-  };
-
-  const con = mysql.createConnection(dataConexion);
-  con.connect();
-
-  con.query('SELECT * FROM user where user = ?', [req.body.user], (error, rows) => {
-    if (rows.length === 0) {
-      con.query('INSERT INTO user SET ?', {
-        user: req.body.user
-      }, (error, results, fields) => {
-        response.id = results.insertId;
-        response.user = req.body.user;
-        con.end();
-        resp.send(response)
-      });
-
-    } else {
-      response.id = rows[rows.length - 1].id;
-      response.user = rows[rows.length - 1].user;
-      con.end();
-      resp.send(response)
-    }
-  });
-
-});
-
 app.get("/api/message", cors(corsOptions), (req, resp) => {
   const con = mysql.createConnection(dataConexion);
   con.connect();
@@ -109,7 +74,6 @@ app.get("/api/message/:id", cors(corsOptions), (req, resp) => {
 
   con.query('SELECT * FROM message where id = ?', [req.params.id], (error, rows) => {
     con.end();
-    console.log(rows)
     resp.send(rows.length === 0 ? null : rows[0]);
 
   });
@@ -120,7 +84,7 @@ app.put('/api/message/:id', cors(corsOptions), (req, resp) => {
   con.connect();
 
   let updateMessage = {
-    from: req.body.from ? req.body.from : null ,
+    from: req.body.from ? req.body.from : null,
     message: req.body.message ? req.body.message : null,
     to: req.body.to ? req.body.to : null,
     date: req.body.date ? req.body.date : null
@@ -128,22 +92,20 @@ app.put('/api/message/:id', cors(corsOptions), (req, resp) => {
 
   con.query('SELECT * FROM message where id = ?', [req.params.id], (error, rows) => {
     if (rows.length !== 0) {
-      updateMessage.from = (updateMessage.from === null ? rows[0].from : updateMessage.from );
-      updateMessage.message = (updateMessage.message === null ? rows[0].message : updateMessage.message );
-      updateMessage.to = (updateMessage.to === null ? rows[0].to : updateMessage.to );
-      updateMessage.date = (updateMessage.date === null ? rows[0].to : updateMessage.date );
+      updateMessage.from = (updateMessage.from === null ? rows[0].from : updateMessage.from);
+      updateMessage.message = (updateMessage.message === null ? rows[0].message : updateMessage.message);
+      updateMessage.to = (updateMessage.to === null ? rows[0].to : updateMessage.to);
+      updateMessage.date = (updateMessage.date === null ? rows[0].to : updateMessage.date);
 
       let update = `date='${updateMessage.date}', message='${updateMessage.message}', \`from\`= ${updateMessage.from}, \`to\`='${updateMessage.to}'`
 
-      con.query(`UPDATE message SET ${update} where id = ?`, [req.params.id ], (error, result) => {
-        console.log(result);
-        console.log(error);
+      con.query(`UPDATE message SET ${update} where id = ?`, [req.params.id], (error, result) => {
         con.end();
         resp.send(updateMessage)
       });
     } else {
       con.end();
-      resp.send({error:"No se encontró el registro"});
+      resp.send({ error: "No se encontró el registro" });
     }
   });
 
@@ -151,21 +113,61 @@ app.put('/api/message/:id', cors(corsOptions), (req, resp) => {
 
 });
 
-app.delete('/api/message/:id', cors(corsOptions), (req,resp) => {
+app.delete('/api/message/:id', cors(corsOptions), (req, resp) => {
   const con = mysql.createConnection(dataConexion);
   con.connect();
 
-  con.query(`DELETE FROM message WHERE id = ? `, [req.params.id ], (error, result) => {
+  con.query(`DELETE FROM message WHERE id = ? `, [req.params.id], (error, result) => {
     con.end();
-    resp.send({status: result.affectedRows === 1 ? true: false })
+    resp.send({ status: result.affectedRows === 1 ? true : false })
+  });
+});
+ // ============== users ============
+
+app.post("/api/user", cors(corsOptions), (req, resp) => {
+  let newUser = {
+    id: null,
+    user: req.body.user,
+    date: req.body.date,
+    socket: req.body.socket,
+    status: req.body.status ? req.body.status : true,
+    messages: req.body.messages ? req.body.messages : 0
+  };
+
+  const con = mysql.createConnection(dataConexion);
+  con.connect();
+
+  con.query('INSERT INTO user SET ?', newUser, (error, results, fields) => {
+    newUser.id = results.insertId;
+    con.end();
+    resp.send(newUser)
   });
 });
 
-app.post("api/messages", cors(corsOptions), (req, resp, next) => {
-  resp.send({
-    id: 1,
-    texto: prueb
-  })
+app.put('/api/user/socket/:name', cors(corsOptions), (req, resp) => {
+  const con = mysql.createConnection(dataConexion);
+  con.connect();
+
+  let updateUser = {
+    status: req.body.status ? req.body.status :  false 
+  }
+
+  con.query('SELECT * FROM user where socket = ?', [req.params.name], (error, rows) => {
+    if (rows.length !== 0) {
+      updateUser.user = (updateUser.user === null ? rows[0].user : updateUser.user);
+
+      let update = `status=${updateUser.status}`
+
+      con.query(`UPDATE user SET ${update} where socket= ?`, [req.params.name], (error, result) => {
+        con.end();
+        resp.send(updateUser)
+      });
+
+    } else {
+      con.end();
+      resp.send({ error: "No se encontró el registro del user" });
+    }
+  });
 });
 
 const http = require("http").createServer(app);
